--- a/contact/addFriend.html
+++ b/contact/addFriend.html
@@ -46,33 +46,33 @@
 <script>
     document.body.className = window.top.theme;
     function doSearch() {
-        var searchText = document.getElementById("searchText").value;
-        if(event.keyCode==13&&searchText){
-            window.top.WSChannel.searchFriends(searchText,(data)=>{
-                // var result = [{id:"id1",name:"name1"},{id:"id2",name:"name2"}];
-                //this.setState({searchResult:data.result});
-                var html="";
-                for(var i=0;i<data.result.length;i++) {
-                    var result = data.result[i];
-                    html += "<div style=\"width:100%;display:flex;flex-direction: row;justify-content: flex-start;align-items: center;margin-top: 10px\">";
-                    html+="<div style=\"width:150px;overflow: hidden\">";
-                    html+=result.name;
-                    html+="</div><div style=\"width:300px\">";
-                    html+=result.uid;
-                    html+="</div><div><img src=\"../images/addFriend.png\" width=\"12\" height=\"12\" style=\"cursor: pointer\" onclick=\"addFriend('";
-                    html+=result.uid;
-                    html+="')\"></div>";
-                    html+="</div>";
-                }
+      const searchText = document.getElementById("searchText").value;
+      if (event.keyCode == 13 && searchText) {
+        window.top.WSChannel.searchFriends(searchText, (data) => {
+          // var result = [{id:"id1",name:"name1"},{id:"id2",name:"name2"}];
+          // this.setState({searchResult:data.result});
+          let html = "";
+          for (let i = 0; i < data.result.length; i++) {
+            const result = data.result[i];
+            html += "<div style=\"width:100%;display:flex;flex-direction: row;justify-content: flex-start;align-items: center;margin-top: 10px\">";
+            html += "<div style=\"width:150px;overflow: hidden\">";
+            html += result.name;
+            html += "</div><div style=\"width:300px\">";
+            html += result.uid;
+            html += "</div><div><img src=\"../images/addFriend.png\" width=\"12\" height=\"12\" style=\"cursor: pointer\" onclick=\"addFriend('";
+            html += result.uid;
+            html += "')\"></div>";
+            html += "</div>";
+          }
 
-                document.getElementById("searchResult").innerHTML=html;
-            });
-        }
+          document.getElementById("searchResult").innerHTML = html;
+        });
+      }
     }
     function addFriend (id) {
-        window.top.WSChannel.applyMakeFriends(id, ()=> {
-            alert("好友申请已发送，等待对方审核");
-        });
+      window.top.WSChannel.applyMakeFriends(id, () => {
+        alert("好友申请已发送，等待对方审核");
+      });
     }
 </script>
 
