--- a/contact/contact.html
+++ b/contact/contact.html
@@ -84,78 +84,73 @@
 
 <script>
     document.body.className = window.top.theme;
-    var selected = "";
-    var selectID = ''
+    let selected = "";
+    const selectID = ''
 
     function hover(name) {
-        if (selected != name)
-           // event.target.style.backgroundColor = "#e0e0e0";
-            document.getElementById(name).backgroundColor = "#e0e0e0"
-
+      if (selected != name)
+      // event.target.style.backgroundColor = "#e0e0e0";
+      { document.getElementById(name).backgroundColor = "#e0e0e0" }
     }
 
     function leave(name) {
-        if (selected != name)
-            //event.target.style.backgroundColor = "#f0f0f0";
-        document.getElementById(name).backgroundColor = "#f0f0f0"
-
+      if (selected != name)
+      // event.target.style.backgroundColor = "#f0f0f0";
+      { document.getElementById(name).backgroundColor = "#f0f0f0" }
     }
 
     function select(id, name, pic) {
+      if (selected) {
+        document.getElementById(selected).style.backgroundColor = "rgb(251,251,251)";
+      }
 
-        if (selected) {
-            document.getElementById(selected).style.backgroundColor = "rgb(251,251,251)";
-        }
-
-        document.getElementById(id).style.backgroundColor = "#e0e0e0";
-        if (selected !== id) {
-            document.getElementById("frame").src = "detail.html?" + id + "&" + name + "&false" + "&" + pic;
-        }
-        selected = id;
+      document.getElementById(id).style.backgroundColor = "#e0e0e0";
+      if (selected !== id) {
+        document.getElementById("frame").src = "detail.html?" + id + "&" + name + "&false" + "&" + pic;
+      }
+      selected = id;
     }
 </script>
 <script>
 
-    async function refreshFriendList({shouldSelect = true} = {}) {
-        const {engine} = window.top
-        const lkapp = engine.getApplication().getCurrentApp()
-        const user = lkapp.getCurrentUser()
-        const ContactManager = engine.get('ContactManager')
-        var all = await ContactManager.asyGetAllMembers(user.id)
-        var html = "";
-        if (all && all.length) {
-            for (var i = 0; i < all.length; i++) {
-                var f = all[i];
-                if (f.id !== user.id) {
-                    html += `<div id='${f.id}' style = "background-color: rgb(251,251,251);border:0px solid red;width:100%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${f.id}')" onmouseout ="leave('${f.id}')" onclick = "select('${f.id}','${f.name}','${f.pic}')"><div  style = "margin-left: 10px;border:0px solid red;width:80%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" >`
-                    html+= f.pic?`<img src="${f.pic}"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;&nbsp;<span style="font-weight: bold;margin-top: 0px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${f.name}</span>`:`<img src="../images/1024x1024.png"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;&nbsp;<span  style="font-weight: bold;margin-top: 0px；overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${f.name}</span>`
-                    html+= `</div></div>`
-                    // html += f.id;
-                    // html += "' style=\"width:100%;height:50px;line-height: 50px;cursor: pointer;padding-left: 10px\" onmouseover=\"hover('";
-                    // html += f.id;
-                    // html += "')\" onmouseout=\"leave('";
-                    // html += f.id;
-                    // html += "')\" onclick=\"select('";
-                    // html += f.id;
-                    // html += "','";
-                    // html += f.name;
-                    // html += "','";
-                    // html += f.pic;
-                    // html += "')\">";
-                    // html += f.name;
-                    // html += "</div>";
-                }
-            }
-            document.getElementById("contact").innerHTML = html;
-            if (shouldSelect) {
-              const first = all[0]
-              select(first.id, first.name, first.pic)
-            }
+    async function refreshFriendList({ shouldSelect = true } = {}) {
+      const { engine } = window.top
+      const lkapp = engine.getApplication().getCurrentApp()
+      const user = lkapp.getCurrentUser()
+      const ContactManager = engine.get('ContactManager')
+      const all = await ContactManager.asyGetAllMembers(user.id)
+      let html = "";
+      if (all && all.length) {
+        for (let i = 0; i < all.length; i++) {
+          const f = all[i];
+          if (f.id !== user.id) {
+            html += `<div id='${f.id}' style = "background-color: rgb(251,251,251);border:0px solid red;width:100%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${f.id}')" onmouseout ="leave('${f.id}')" onclick = "select('${f.id}','${f.name}','${f.pic}')"><div  style = "margin-left: 10px;border:0px solid red;width:80%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" >`
+            html += f.pic ? `<img src="${f.pic}"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;&nbsp;<span style="font-weight: bold;margin-top: 0px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${f.name}</span>` : `<img src="../images/1024x1024.png"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;&nbsp;<span  style="font-weight: bold;margin-top: 0px；overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${f.name}</span>`
+            html += `</div></div>`
+            // html += f.id;
+            // html += "' style=\"width:100%;height:50px;line-height: 50px;cursor: pointer;padding-left: 10px\" onmouseover=\"hover('";
+            // html += f.id;
+            // html += "')\" onmouseout=\"leave('";
+            // html += f.id;
+            // html += "')\" onclick=\"select('";
+            // html += f.id;
+            // html += "','";
+            // html += f.name;
+            // html += "','";
+            // html += f.pic;
+            // html += "')\">";
+            // html += f.name;
+            // html += "</div>";
+          }
         }
+        document.getElementById("contact").innerHTML = html;
+        if (shouldSelect) {
+          const first = all[0]
+          select(first.id, first.name, first.pic)
+        }
+      }
     }
 
     refreshFriendList();
-
-
 </script>
 </html>
