--- a/index/index.html
+++ b/index/index.html
@@ -37,13 +37,14 @@
         }
     </style>
     <script>
-        const {isDev} = require('../config')
+        const { isDev } = require('../config')
+
         const indexEntry = isDev ? './index.js' : './index.bundle.js'
 
         document.write(`<script src="${indexEntry}" />`)
     </script>
     <script>
-        //fixme: next script is ignored after document.write
+        // fixme: next script is ignored after document.write
     </script>
     <script src="./custom.js"></script>
     <script src="./dev.js"></script>
@@ -55,77 +56,75 @@
 <iframe id="frame" style="width:100%;height:100%;" frameborder="0"></iframe>
 </body>
 <script>
-    const {engine} = window.top
+    const { engine } = window.top
     const ChatManager = engine.get('ChatManager')
     start()
 
     async function start() {
-        let LKApplication = engine.getApplication();
-        let db = require('../store/ElecSqlite');
-        // 等待数据库初始化完毕
-        await LKApplication.getCurrentApp().start(db, LKApplication.PLATFORM_ELECTRON);
+      const LKApplication = engine.getApplication();
+      const db = require('../store/ElecSqlite');
+      // 等待数据库初始化完毕
+      await LKApplication.getCurrentApp().start(db, LKApplication.PLATFORM_ELECTRON);
 
-        let userId
-        engine.getUserManager().asyGetAll().then(async (users) => {
-            if (users && users.length > 0) {
-                let cur = users[0];
-                userId = cur.id
-                try {
-                    await LKApplication.getCurrentApp().setCurrentUser(cur);
+      let userId
+      engine.getUserManager().asyGetAll().then(async (users) => {
+        if (users && users.length > 0) {
+          const cur = users[0];
+          userId = cur.id
+          try {
+            await LKApplication.getCurrentApp().setCurrentUser(cur);
+          } catch (err) {
+            console.log({ err })
+          }
+          window.theme = document.body.className = "left";
+          document.getElementById("frame").src = "main.html";
+        } else {
+          document.getElementById("frame").src = "register.html";
+        }
+      }).catch((err) => {
+        alert(err)
+    })
 
-                } catch (err) {
-                    console.log({err})
-                }
-                window.theme = document.body.className = "left";
-                document.getElementById("frame").src = "main.html";
-            } else {
-                document.getElementById("frame").src = "register.html";
+      const notifyNewMsg = function (param) {
+        // filter sync message by other devices of oneself
+        if (!param.isFromSelf) {
+          engine.getChatManager().asyGetAllMsgNotReadNum().then((num) => {
+            // console.log({num})
+            ipc.send("messageReceive", { total: num });
+            let content = ''
+            try {
+              if (param.content) {
+                content = `${param.name}: ${ChatManager.asyMessageType(param.type, param.content)}`
+              } else {
+                content = ''
+              }
+            } catch (e) {
+              content = `${param.name}: ${param.content}`
             }
-        }).catch(function (err) {
-            alert(err)
+            const notification = {
+              title: "新消息",
+              body: content
+            }
+            if (process.env.NODE_ENV === 'development') {
+              notification.icon = '../images/test.png'
+            }
+            new window.Notification(notification.title, notification);
+          })
+        }
+      }
+
+      const notifyReadMsg = function () {
+        engine.getChatManager().asyGetAllMsgNotReadNum().then((num) => {
+          ipc.send("messageRead", { total: num });
         })
+      }
+      engine.getChatManager().on("msgReceived", notifyNewMsg);
+      engine.getChatManager().on("msgRead", notifyReadMsg);
 
-        var notifyNewMsg = function (param) {
-            // filter sync message by other devices of oneself
-            if (!param.isFromSelf) {
-                engine.getChatManager().asyGetAllMsgNotReadNum().then(function (num) {
-                    // console.log({num})
-                    ipc.send("messageReceive", {total: num});
-                    var content = ''
-                    try {
-                        if (param.content) {
-                            content = `${param.name}: ${ChatManager.asyMessageType(param.type, param.content)}`
-                        } else {
-                            content = ''
-                        }
-                    } catch (e) {
-                        content = `${param.name}: ${param.content}`
-                    }
-                    const notification = {
-                        title: "新消息",
-                        body: content
-                    }
-                    if (process.env.NODE_ENV === 'development') {
-                        notification.icon = '../images/test.png'
-                    }
-                    new window.Notification(notification.title, notification);
-                })
-            }
-        }
-
-        var notifyReadMsg = function () {
-            engine.getChatManager().asyGetAllMsgNotReadNum().then(function (num) {
-                ipc.send("messageRead", {total: num});
-            })
-        }
-        engine.getChatManager().on("msgReceived", notifyNewMsg);
-        engine.getChatManager().on("msgRead", notifyReadMsg);
-
-        var checkVersion = function () {
-            window.top.ipc.send("upgrade-request", {toIndexIFNot: false});
-        }
-        LKApplication.getCurrentApp().on("currentUserChanged", checkVersion)
+      const checkVersion = function () {
+        window.top.ipc.send("upgrade-request", { toIndexIFNot: false });
+      }
+      LKApplication.getCurrentApp().on("currentUserChanged", checkVersion)
     }
-
 </script>
 </html>
