--- a/recent/chatBox.html
+++ b/recent/chatBox.html
@@ -20,109 +20,105 @@
 
     </style>
     <script>
-        //alert(document.body.isContentEditable)
+        // alert(document.body.isContentEditable)
         function pasteImg() {
-            document.body.focus();
-            var img = window.top.clipboard.readImage();
-            if(!img.isEmpty()){
-                var html = `<img width=\"${img.getSize().width/2}\" height=\"${img.getSize().height/2}\" src=\"${img.toDataURL()}\">`;
-                document.execCommand("insertHTML",false,html);
-            }
+          document.body.focus();
+          const img = window.top.clipboard.readImage();
+          if (!img.isEmpty()) {
+            const html = `<img width=\"${img.getSize().width / 2}\" height=\"${img.getSize().height / 2}\" src=\"${img.toDataURL()}\">`;
+            document.execCommand("insertHTML", false, html);
+          }
         }
-         function  cont() {
-             parent.window.document.getElementById("face").style["display"]='none'
-             parent.window.document.getElementById("GroupMembers").style["display"]='none'
+        function cont() {
+          parent.window.document.getElementById("face").style.display = 'none'
+          parent.window.document.getElementById("GroupMembers").style.display = 'none'
         }
         function paste() {
-            if((event.metaKey||event.ctrlKey)&&event.keyCode==90){//undo
-                document.execCommand("undo");
-            }else if ((event.metaKey || event.ctrlKey) && event.keyCode == 67) {//copy
-                event.preventDefault();
-                document.execCommand("copy");
+          if ((event.metaKey || event.ctrlKey) && event.keyCode == 90) { // undo
+            document.execCommand("undo");
+          } else if ((event.metaKey || event.ctrlKey) && event.keyCode == 67) { // copy
+            event.preventDefault();
+            document.execCommand("copy");
+          } else if ((event.metaKey || event.ctrlKey) && event.keyCode == 86) { // paste
+            event.preventDefault();
+            const text = window.top.clipboard.readText();
+            if (text) {
+      //                    var selection = window.getSelection();
+      //                    selection.deleteFromDocument();
+      //                    var range =  selection.getRangeAt(0);
+      //                    range.insertNode(document.createTextNode(text));
+      //                    selection.collapseToEnd();
+              document.execCommand("insertText", false, text);
+            } else {
+              pasteImg();
             }
-            else if((event.metaKey||event.ctrlKey)&&event.keyCode==86){//paste
-                event.preventDefault();
-                var text = window.top.clipboard.readText();
-                if(text){
-//                    var selection = window.getSelection();
-//                    selection.deleteFromDocument();
-//                    var range =  selection.getRangeAt(0);
-//                    range.insertNode(document.createTextNode(text));
-//                    selection.collapseToEnd();
-                    document.execCommand("insertText",false,text);
-                }else{
-                    pasteImg();
+          } else if (event.altKey && event.keyCode == 13) {
+            event.preventDefault();
+            const selection = window.getSelection();
+            // selection.deleteFromDocument();
+            const range = selection.getRangeAt(0);
+            const divTag = document.createElement("div");
+            divTag.appendChild(document.createElement("br"))
+            range.insertNode(divTag);
+            selection.collapseToEnd();
+    //                var selection = window.getSelection();
+    //                selection.deleteFromDocument();
+    //                var newRange = document.createRange();
+    //                var range = selection.getRangeAt(0);
+    //                selection.collapseToEnd();
+    //                range.startContainer.parentElement.appendChild(document.createElement("br"));
+
+    //                range.insertNode(document.createElement("br"));
+          } else if (event.keyCode == 13) {
+            event.preventDefault();
+            const imgReg = /(<img.*?>)/ig;// img为分割
+            const srcReg = /src=[\"\'](.*)[\"\']/ig;
+            const widthReg = /width=[\"\'](.*)[\"\']/ig;
+            const heightReg = /height=[\"\'](.*)[\"\']/ig;
+            const wrapTagStartReg = /<[div|br].*?>/ig;// 折行标签开始部分替换成换行符
+            // 匹配非折行标签
+            const notWrapTagReg = /<(?![div|br]).*?>/ig;
+    //              var r = document.body.innerHTML.match(reg);
+
+            const ss = document.body.innerHTML.split(imgReg);
+            ss.forEach((p) => {
+            // alert(p);
+              if (p.startsWith("<img")) {
+                const srcStr = p.match(srcReg);
+                if (srcStr) {
+                  var data = RegExp.$1;
                 }
-            }else if(event.altKey&&event.keyCode==13){
-                event.preventDefault();
-                var selection = window.getSelection();
-                //selection.deleteFromDocument();
-                var range =  selection.getRangeAt(0);
-                var divTag = document.createElement("div");
-                divTag.appendChild(document.createElement("br"))
-                range.insertNode(divTag);
-                selection.collapseToEnd();
-//                var selection = window.getSelection();
-//                selection.deleteFromDocument();
-//                var newRange = document.createRange();
-//                var range = selection.getRangeAt(0);
-//                selection.collapseToEnd();
-//                range.startContainer.parentElement.appendChild(document.createElement("br"));
-
-//                range.insertNode(document.createElement("br"));
-
-
-            }else if(event.keyCode==13){
-                event.preventDefault();
-                var imgReg = /(<img.*?>)/ig;//img为分割
-                var srcReg = /src=[\"\'](.*)[\"\']/ig;
-                var widthReg = /width=[\"\'](.*)[\"\']/ig;
-                var heightReg = /height=[\"\'](.*)[\"\']/ig;
-                var wrapTagStartReg = /<[div|br].*?>/ig;//折行标签开始部分替换成换行符
-                //匹配非折行标签
-                var notWrapTagReg = /<(?![div|br]).*?>/ig;
-//              var r = document.body.innerHTML.match(reg);
-
-                var ss = document.body.innerHTML.split(imgReg);
-                ss.forEach(function (p) {
-                    //alert(p);
-                    if(p.startsWith("<img")){
-                        var srcStr = p.match(srcReg);
-                        if(srcStr){
-                            var data = RegExp.$1;
-                        }
-                        var widthStr = p.match(widthReg);
-                        if(widthStr){
-                            var width = parseInt(RegExp.$1);
-                        }
-                        var heightStr = p.match(heightReg);
-                        if(heightStr){
-                            var height = parseInt(RegExp.$1);
-                        }
-                        if(data){
-                            data = data.substring(data.indexOf(",")+1);
-                            window.parent.sendImg(data,width,height);
-                        }
-                    }else{
-                        var s = p.replace(notWrapTagReg,"").replace(wrapTagStartReg,"\r\n").trim();
-                        if(s)
-                        window.parent.sendText(s);
-                    }
-                })
-                document.body.innerHTML = "";
-               // window.parent.send();
-            }
+                const widthStr = p.match(widthReg);
+                if (widthStr) {
+                  var width = parseInt(RegExp.$1);
+                }
+                const heightStr = p.match(heightReg);
+                if (heightStr) {
+                  var height = parseInt(RegExp.$1);
+                }
+                if (data) {
+                  data = data.substring(data.indexOf(",") + 1);
+                  window.parent.sendImg(data, width, height);
+                }
+              } else {
+                const s = p.replace(notWrapTagReg, "").replace(wrapTagStartReg, "\r\n").trim();
+                if (s) { window.parent.sendText(s); }
+              }
+        })
+            document.body.innerHTML = "";
+            // window.parent.send();
+          }
         }
         window.onload = function() {
-            document.body.focus();
-            var range = window.getSelection();//创建range
-            range.selectAllChildren(document.body);//range 选择obj下所有子内容
-            range.collapseToEnd();//光标移至最后
+          document.body.focus();
+          const range = window.getSelection();// 创建range
+          range.selectAllChildren(document.body);// range 选择obj下所有子内容
+          range.collapseToEnd();// 光标移至最后
         };
-        window.top.ipc.on("capture-complete",pasteImg);
-        window.addEventListener("beforeunload", function (event) {
-            window.top.ipc.removeListener("capture-complete",pasteImg);
-        });
+        window.top.ipc.on("capture-complete", pasteImg);
+        window.addEventListener("beforeunload", (event) => {
+  window.top.ipc.removeListener("capture-complete", pasteImg);
+});
     </script>
 </head>
 <body contenteditable="true"  onclick="cont()" onkeydown="paste()" style="background-color: rgb(243,243,243)">&nbsp;&nbsp;&nbsp;</body></html>
